--- a/js/gyak2.html
+++ b/js/gyak2.html
@@ -10,7 +10,11 @@
         {
             width: 65px;
             height: 65px;
+            border: 2px solid black;
+            border-radius: 12px;
+            padding: 5px;
         }
+
     </style>
 </head>
 <body>
@@ -54,7 +58,8 @@
     <form>
         <input type="button" value="7" id="" onclick="nyomas('7')">
         <input type="button" value="8" id="" onclick="nyomas('8')">
-        <input type="button" value="9" id="" onclick="nyomas('9')"><br>
+        <input type="button" value="9" id="" onclick="nyomas('9')">
+        <br>
         <input type="button" value="4" id="" onclick="nyomas('4')">
         <input type="button" value="5" id="" onclick="nyomas('5')">
         <input type="button" value="6" id="" onclick="nyomas('6')"><br>
@@ -62,7 +67,8 @@
         <input type="button" value="2" id="" onclick="nyomas('2')">
         <input type="button" value="3" id="" onclick="nyomas('3')"><br>
         <input type="button" value="0" id="" onclick="nyomas('0')">
-        <input type="button" value="C" id="" onclick="nyomas('C')"><br>
+        <input type="button" value="C" id="" onclick="nyomas('C')">
+        <br>
 
         <input type="button" value="+" id="" onclick="muvelet('+')">
         <input type="button" value="-" id="" onclick="muvelet('-')">
