--- a/js/karacsonyi/karacsonyfa.html
+++ b/js/karacsonyi/karacsonyfa.html
@@ -15,7 +15,10 @@
         }
         function gombdisz()
         {
-            let maxH
+            let maxH = 700;
+            let maxW = 465;
+            let magassag = rand(0,700);
+            let arany= maxH
             elem=document.createElement("img");
             elem.src="disz1.jpg";
             elem.style.height=rand(30,100);
