--- a/js/feladat1.html
+++ b/js/feladat1.html
@@ -72,5 +72,10 @@
             <td>5-5</td>
         </tr>
        </table>
+       <script>
+            console.log(document.getElementsByTagName("body")[0].children[0].style.backgroundColor="lightblue");
+            let masodik=document.querySelector("ul")
+            console.log(masodik.children[1].children[0]);
+       </script>
 </body>
 </html>
