--- a/memoriajatek/index.html
+++ b/memoriajatek/index.html
@@ -7,8 +7,11 @@
     <script src="jatek.js"></script>
     <title>Memóriajáték</title>
 </head>
-<body>
-    <header></header>
+<body onload="init()">
+    <header>
+        <h1>Memoriajatek</h1>
+        <h1></h1>
+    </header>
     <div id="asztal"></div>
     <footer>11.C 2024 Jankovics Péter</footer>
 </body>
