--- a/memoriajatek/index.html
+++ b/memoriajatek/index.html
@@ -10,7 +10,7 @@
 <body onload="init()">
     <header>
         <h1>Memoriajatek</h1>
-        <h1></h1>
+        <h2 id="ido">0:0</h2>
     </header>
     <div id="asztal"></div>
     <footer>11.C 2024 Jankovics Péter</footer>
