--- a/js/gyak/gyak1.html
+++ b/js/gyak/gyak1.html
@@ -2,6 +2,8 @@
 <html lang="hu">
 <head>
     <title>Felcsi</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body onload="loadDoc()">
     <div id="demo"></div>
@@ -19,6 +21,17 @@
         };
         xhttp.open("GET", "valami copy.json");
         xhttp.send();
+      }
+
+      function randomuserme(){
+        //https://randomuser.me/api
+        //https://randomuser.me/documentation
+        const xhr = XMLHttpRequest();
+        xhr.onload = function () {
+          document.getElementById("ide").innerHTML = this.responseText;   
+          
+        }
+        xhr.open("GET","https://randomuser.me/api/")
       }
     </script>
 </body>
